--- a/app/src/main/res/layout/activity_lista_facturas.xml
+++ b/app/src/main/res/layout/activity_lista_facturas.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:layout_width="match_parent"
@@ -20,8 +19,7 @@
             android:background="@color/white"
             app:popupTheme="@style/Theme.ListaFacturasV02.PopupOverlay"
             app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:titleTextAppearance="@style/Toolbar.TitleText"/>
-
+            app:theme="@style/ToolbarTheme"/>
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
