--- a/app/src/main/res/layout/dialogfragment_smart_solar_solicitud_autoconsumo.xml
+++ b/app/src/main/res/layout/dialogfragment_smart_solar_solicitud_autoconsumo.xml
@@ -32,14 +32,12 @@
 
     <Button
         android:id="@+id/vtAceptar"
+        style="@style/botones_primarios"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="45dp"
-        android:background="@drawable/shape_aplicar_button_background"
         android:text="Aceptar"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tvTiempoEstimado"
         app:layout_constraintStart_toStartOf="@+id/tvTiempoEstimado"
