--- a/app/src/main/res/layout/fragment_lista_facturas.xml
+++ b/app/src/main/res/layout/fragment_lista_facturas.xml
@@ -11,13 +11,9 @@
 
         <TextView
             android:id="@+id/tvTitleFactura"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TitleFragment"
             android:layout_marginStart="20dp"
             android:text="Facturas"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
