--- a/app/src/main/res/layout/activity_lista_facturas.xml
+++ b/app/src/main/res/layout/activity_lista_facturas.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,9 +18,22 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
+            app:contentInsetStart="0dp"
             app:popupTheme="@style/Theme.ListaFacturasV02.PopupOverlay"
-            app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:theme="@style/ToolbarTheme"/>
+            app:layout_scrollFlags="scroll|enterAlways|snap">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/toolbarDetalleBack"
+                    style="@style/toolbar_detalle_button_back"
+                    android:layout_gravity="center_vertical"
+                    tools:ignore="TextSizeCheck,TextContrastCheck,TouchTargetSizeCheck"
+                    android:text="@string/toolbarDetalleBackTextListaFacturas" />
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
