--- a/app/src/main/res/layout/fragment_smart_solar_energia.xml
+++ b/app/src/main/res/layout/fragment_smart_solar_energia.xml
@@ -23,7 +23,7 @@
         android:layout_marginBottom="150dp"
         android:gravity="center_horizontal"
         android:textStyle="bold"
-        android:text="Estamos trabajando en mejorar la App. Tu paneles solares siguen produciendo en breve podrás seguir viendo tu producción solar. Sentimos las molestias."
+        android:text="@string/tvInfoTextEnergiaSmartSolarText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
         app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo" />
