--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,21 @@
     <!-- Fragment Smart Solar -->
     <dimen name="GlobalMarginSideSmartSolar">20dp</dimen>
     <dimen name="GlobalMarginTopDetallesSmartSolar">15dp</dimen>
+
+    <dimen name="dimen_size_24">24dp</dimen>
+    <dimen name="dimen_size_16">16dp</dimen>
+    <dimen name="dimen_size_40">40dp</dimen>
+    <dimen name="dimen_size_0">0dp</dimen>
+    <dimen name="dimen_size_45">45dp</dimen>
+    <dimen name="dimen_size_20">20dp</dimen>
+    <dimen name="dimen_size_70">70dp</dimen>
+    <dimen name="dimen_size_44">44dp</dimen>
+    <dimen name="dimen_size_4">4dp</dimen>
+    <dimen name="dimen_size_8">8dp</dimen>
+    <dimen name="dimen_size_12">12dp</dimen>
+    <dimen name="dimen_size_1">1dp</dimen>
+    <dimen name="dimen_size_6">6dp</dimen>
+    <dimen name="dimen_size_300">300dp</dimen>
+    <dimen name="dimen_size_328">328dp</dimen>
+    <dimen name="dimen_size_10">10dp</dimen>
 </resources>
