--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -29,7 +29,7 @@
         android:id="@+id/tvTitlePracticasAndroid"
         style="@style/TitleFragment"
         android:layout_marginStart="20dp"
-        android:text="Prácticas Android"
+        android:text="@string/tvTitlePracticasAndroidText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbarPractica" />
 
@@ -37,8 +37,8 @@
         android:id="@+id/rvListaPracticas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/dimen_size_20"
+        android:layout_marginTop="@dimen/dimen_size_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitlePracticasAndroid"
