--- a/app/src/main/res/layout/item_facturas.xml
+++ b/app/src/main/res/layout/item_facturas.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="@dimen/dimen_size_70">
 
     <TextView
         android:id="@+id/tvFacturaFecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/dimen_size_12"
         android:text="31 Ago 2020"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/tvFacturaTipo"
@@ -20,7 +20,7 @@
         android:id="@+id/tvFacturaTipo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="@dimen/dimen_size_12"
         android:text="Pediente de pago"
         android:textColor="@color/red"
         android:textSize="16sp"
@@ -31,7 +31,7 @@
         android:id="@+id/tvFacturaPrecio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="@dimen/dimen_size_12"
         android:gravity="center_vertical"
         android:text="54,56€"
         android:textSize="18sp"
@@ -41,8 +41,8 @@
 
     <View
         android:id="@+id/divider"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_size_1"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:id="@+id/ivbArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="@dimen/dimen_size_12"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
