--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="dimen_size_300">300dp</dimen>
     <dimen name="dimen_size_328">328dp</dimen>
     <dimen name="dimen_size_10">10dp</dimen>
+    <dimen name="dimen_size_30">30dp</dimen>
 </resources>
