08/05/2023 - Agregación de "{ }" a los if, Agregación de else a los when

--- a/app/src/main/res/layout/item_facturas.xml
+++ b/app/src/main/res/layout/item_facturas.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_size_12"
-        android:text="31 Ago 2020"
+        tools:text="31 Ago 2020"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/tvFacturaTipo"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dimen_size_12"
-        android:text="Pediente de pago"
+        tools:text="Pediente de pago"
         android:textColor="@color/red"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/dimen_size_12"
         android:gravity="center_vertical"
-        android:text="54,56€"
+        tools:text="54,56€"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ivbArrow"
