--- a/app/src/main/res/layout/dialogfragment_detalles_facturas.xml
+++ b/app/src/main/res/layout/dialogfragment_detalles_facturas.xml
@@ -6,24 +6,24 @@
 
     <TextView
         android:id="@+id/tvInformacionDetallesFacturas"
+        style="@style/SubTitleFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_size_24"
         android:text="@string/tvInformacionDetallesFacturasText"
-        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvNoFuncionalDetallesFacturas"
+        style="@style/NormalTextDialogFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_size_16"
         android:layout_marginTop="@dimen/dimen_size_24"
         android:layout_marginEnd="@dimen/dimen_size_16"
         android:text="@string/tvNoFuncionalDetallesFacturasText"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvInformacionDetallesFacturas" />
