--- a/app/src/main/res/layout/dialogfragment_smart_solar_solicitud_autoconsumo.xml
+++ b/app/src/main/res/layout/dialogfragment_smart_solar_solicitud_autoconsumo.xml
@@ -6,26 +6,24 @@
 
     <TextView
         android:id="@+id/tvEstadoSolicitudSmartSolar"
+        style="@style/SubTitleFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_size_40"
         android:layout_marginTop="@dimen/dimen_size_24"
         android:layout_marginEnd="@dimen/dimen_size_40"
         android:text="@string/tvEstadoSolicitudSmartSolarText"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvTiempoEstimadoSmartSolar"
+        style="@style/NormalTextDialogFragment"
         android:layout_width="@dimen/dimen_size_0"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_size_24"
-        android:gravity="center_horizontal"
         android:text="@string/tvTiempoEstimadoSmartSolarText"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/tvEstadoSolicitudSmartSolar"
         app:layout_constraintStart_toStartOf="@+id/tvEstadoSolicitudSmartSolar"
         app:layout_constraintTop_toBottomOf="@+id/tvEstadoSolicitudSmartSolar" />
