--- a/app/src/main/res/layout/fragment_smart_solar_energia.xml
+++ b/app/src/main/res/layout/fragment_smart_solar_energia.xml
@@ -18,6 +18,7 @@
 
     <TextView
         android:id="@+id/tvInfoTextEnergiaSmartSolar"
+        style="@style/NormalTextFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="150dp"
