--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="botones_primarios">
+    <style name="botones_primarios" parent="NormalTextFragment">
         <item name="android:stateListAnimator">@null</item>
         <item name="android:background">@drawable/selector_boton_primario</item>
         <item name="android:textColor">@color/white</item>
@@ -8,7 +8,7 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="botones_secundarios">
+    <style name="botones_secundarios" parent="NormalTextFragment">
         <item name="android:stateListAnimator">@null</item>
         <item name="android:background">@drawable/selector_boton_secundario</item>
         <item name="android:textColor">@color/green_500</item>
@@ -16,12 +16,11 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="DetallesSmartSolar_TextInputEditText">
+    <style name="DetallesSmartSolar_TextInputEditText" parent="NormalTextFragment">
         <item name="android:background">@color/white</item>
         <item name="android:inputType">none</item>
         <item name="android:focusable">false</item>
         <item name="android:clickable">true</item>
-        <item name="android:text">Null</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
@@ -32,6 +31,32 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="SubTitleFragment">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="NormalTextFragment">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="NormalTextDialogFragment">
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="SubTitleItem">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="CommentTextItem">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="NormalTextItem">
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="toolbar_detalle_button_back">
