--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DashBoardActivity">
+    tools:context=".ui.view.dashboard.DashBoardActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbarPractica"
