--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,7 @@
     <dimen name="dimen_size_328">328dp</dimen>
     <dimen name="dimen_size_10">10dp</dimen>
     <dimen name="dimen_size_30">30dp</dimen>
+    <dimen name="dimen_size_100">100dp</dimen>
+    <dimen name="dimen_size_150">150dp</dimen>
+    <dimen name="dimen_size_5">5dp</dimen>
 </resources>
