--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -16,7 +16,15 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="DetallesSmartSolar_TextInputEditText" parent="NormalTextFragment">
+    <style name="boton_login_registrate">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:background">@drawable/selector_boton_primario_blanco</item>
+        <item name="android:textColor">@color/green_500</item>
+        <item name="android:elevation">0dp</item>
+    </style>
+
+    <style name="detalles_smart_solar_text_input_edit_text" parent="NormalTextFragment">
         <item name="android:background">@color/white</item>
         <item name="android:inputType">none</item>
         <item name="android:focusable">false</item>
@@ -67,5 +75,11 @@
         <item name="android:textAlignment">textStart</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/green_500</item>
+    </style>
+
+    <style name="login_edit_text" parent="NormalTextFragment">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColorHint">@color/grey</item>
     </style>
 </resources>
